--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
 h1 {
-    color:blueviolet;
+    color:rgb(186, 222, 230);
     font-family: fantasy;
-    font-weight: 500;
-}
-body{
-    background-color: coral;
-
-}
-p {
-    color:thistle;
-    font-size: 20px;
+    font-weight: 10000;
+    text-decoration: underline;
+    font-size: 48px;
     text-align: center;
+    
+}
+ body {
+     background-color: rgb(215, 135, 70);
+    
+ }
+
+
+p {
+    color:rgb(237, 215, 237);
+    font-size: 30px;
+    text-align: center;
+}
+
+h2 {
+    text-align: left;
+    color: rgb(154, 147, 201);
 }
